--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.meetmap"
+        applicationId "com.ikalne.meetmap"
         minSdk 22
         targetSdk 32
         versionCode 1
