--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,13 +38,15 @@
 
         <activity
             android:name="com.ikalne.meetmap.Login"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/MyTheme.NoActionBar"/>
         <activity
             android:name="com.ikalne.meetmap.SignUp"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/MyTheme.NoActionBar"/>
         <activity
             android:name="com.ikalne.meetmap.Splash"
-
+            android:theme="@style/MyTheme.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
