Added: the name of the app in the splash.xml, new styles and new image Modified: androidManifest, splash.kt and the duration of the animations

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
 
         <activity
             android:name="com.ikalne.meetmap.Initial"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/MyTheme.NoActionBar"/>
         <activity
             android:name="com.ikalne.meetmap.Profile"
             android:exported="false" />
