initial login: title, edit text, buttons, styles, selectors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,19 +38,22 @@
 
         <activity
             android:name="com.ikalne.meetmap.Login"
-            android:exported="false" />
+            android:exported="true"
+            android:theme="@style/MyTheme.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name="com.ikalne.meetmap.SignUp"
             android:exported="false" />
         <activity
             android:name="com.ikalne.meetmap.Splash"
 
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <meta-data
