--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,13 +38,8 @@
 
         <activity
             android:name="com.ikalne.meetmap.Login"
-            android:exported="true"
+            android:exported="false"
             android:theme="@style/MyTheme.NoActionBar">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         </activity>
         <activity
             android:name="com.ikalne.meetmap.SignUp"
@@ -52,7 +47,12 @@
         <activity
             android:name="com.ikalne.meetmap.Splash"
 
-            android:exported="false">
+            android:exported="true">
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
 
         </activity>
 
