edittext selector login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,13 @@
 
         <activity
             android:name="com.ikalne.meetmap.Login"
-            android:exported="false"
+            android:exported="true"
             android:theme="@style/MyTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.ikalne.meetmap.SignUp"
@@ -48,11 +53,6 @@
             android:name="com.ikalne.meetmap.Splash"
 
             android:exported="true">
-            <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
 
         </activity>
 
