--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
             android:exported="false" />
         <activity
             android:name=".EditProfile"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/MyTheme.NoActionBar"/>
         <activity
             android:name=".Chat"
             android:exported="false" />
@@ -60,7 +61,7 @@
         <activity
             android:name=".Login"
             android:exported="false"
-            android:theme="@style/MyTheme.NoActionBar"></activity>
+            android:theme="@style/MyTheme.NoActionBar"/>
         <activity
             android:name=".SignUp"
             android:exported="false"
