--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/MyTheme.NoActionBar">
 
         </activity>
         <activity
