--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,12 +39,6 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
-            android:exported="false"
-            android:theme="@style/Theme.MeetMap.NoActionBar">
-
-        </activity>
-        <activity
             android:name=".Initial"
             android:exported="false"
             android:theme="@style/Theme.MeetMap.NoActionBar" />
@@ -65,7 +59,7 @@
         <activity
             android:name=".Splash"
             android:exported="true"
-            android:theme="@style/Theme.MeetMap.NoActionBar">
+            android:theme="@style/Theme.MeetMap.NoActionBar.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
