--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MeetMap"
         tools:targetApi="33">
+
         <activity
             android:name=".ResetPassword"
             android:exported="false">
@@ -36,11 +39,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
-        <activity
-            android:name=".MapsActivity"
-            android:exported="false"
-            android:theme="@style/MyTheme.NoActionBar"></activity>
         <activity
             android:name=".Initial"
             android:exported="false"
@@ -64,13 +62,21 @@
             android:name=".ActivitiesList"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".SignUpScroll"
             android:exported="false"
-            android:theme="@style/MyTheme.NoActionBar" />
+            android:theme="@style/Theme.MeetMap.NoActionBar" >
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
-            android:name=".SignUp"
+            android:name=".LoginScroll"
             android:exported="false"
-            android:theme="@style/MyTheme.NoActionBar" />
+            android:theme="@style/Theme.MeetMap.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".Splash"
             android:exported="true"
