--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.4.0"
     implementation 'androidx.room:room-common:2.4.2'
     kapt "androidx.room:room-compiler:2.4.0"
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 }
