changed designs for profileview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".fragments.SuscribersActivity"
+            android:label="Suscribers Activity" />
+        <activity
+            android:name=".ProfileViewActivity"
+            android:label="Profile View Activity" />
+        <activity
             android:name=".MainAppActivity"
             android:exported="false"
             android:label="@string/title_activity_main_app"
